[gd_scene load_steps=11 format=3 uid="uid://v68208pndkv8"]

[ext_resource type="Script" path="res://addons/SafeArea/SafeArea.gd" id="1_4bk0j"]
[ext_resource type="PackedScene" uid="uid://d0vjpt4wshrte" path="res://assets/ui/animated_background/animated_background.tscn" id="1_887v3"]
[ext_resource type="Script" path="res://main/main.gd" id="1_rsvg3"]
[ext_resource type="PackedScene" uid="uid://dqqet8nw8jrnv" path="res://assets/ui/loading/loading.tscn" id="2_shwhi"]
[ext_resource type="PackedScene" uid="uid://g56d7vwi85u6" path="res://assets/ui/error_display/error_display.tscn" id="4_qn2d8"]
[ext_resource type="PackedScene" uid="uid://bvhmhj8eit6p6" path="res://main/sub_main_scene/login/login.tscn" id="5_jyxho"]
[ext_resource type="PackedScene" uid="uid://55468m5u6r47" path="res://main/sub_main_scene/main_menu/main_menu.tscn" id="6_14dly"]
[ext_resource type="PackedScene" uid="uid://dqu1dnmrn7ay2" path="res://main/sub_main_scene/gameplay/gameplay.tscn" id="7_stpuy"]
[ext_resource type="PackedScene" uid="uid://doevsa43xqs6q" path="res://main/sub_main_scene/rank/rank.tscn" id="8_1ytuf"]
[ext_resource type="PackedScene" uid="uid://dsbwmk7mlwtqn" path="res://main/sub_main_scene/dictionary/dictionary.tscn" id="9_bhadj"]

[node name="main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_rsvg3")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="animated_background" parent="CanvasLayer/Control" instance=ExtResource("1_887v3")]
layout_mode = 1

[node name="loading" parent="CanvasLayer/Control" instance=ExtResource("2_shwhi")]
visible = false
layout_mode = 1

[node name="error_display" parent="CanvasLayer/Control" instance=ExtResource("4_qn2d8")]
visible = false
layout_mode = 1

[node name="SafeArea" type="MarginContainer" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_4bk0j")

[node name="login" parent="CanvasLayer/Control/SafeArea" instance=ExtResource("5_jyxho")]
visible = false
layout_mode = 2

[node name="main_menu" parent="CanvasLayer/Control/SafeArea" instance=ExtResource("6_14dly")]
visible = false
layout_mode = 2

[node name="gameplay" parent="CanvasLayer/Control/SafeArea" instance=ExtResource("7_stpuy")]
visible = false
layout_mode = 2

[node name="rank" parent="CanvasLayer/Control/SafeArea" instance=ExtResource("8_1ytuf")]
visible = false
layout_mode = 2

[node name="dictionary" parent="CanvasLayer/Control/SafeArea" instance=ExtResource("9_bhadj")]
visible = false
layout_mode = 2

[connection signal="retry" from="CanvasLayer/Control/error_display" to="." method="_on_error_display_retry"]
[connection signal="login_completed" from="CanvasLayer/Control/SafeArea/login" to="." method="_on_login_login_completed"]
[connection signal="back_press" from="CanvasLayer/Control/SafeArea/main_menu" to="." method="_on_main_menu_back_press"]
[connection signal="logout" from="CanvasLayer/Control/SafeArea/main_menu" to="." method="_on_main_menu_logout"]
[connection signal="play" from="CanvasLayer/Control/SafeArea/main_menu" to="." method="_on_main_menu_play"]
[connection signal="rank" from="CanvasLayer/Control/SafeArea/main_menu" to="." method="_on_main_menu_rank"]
[connection signal="add_to_dictionary" from="CanvasLayer/Control/SafeArea/gameplay" to="." method="_on_gameplay_add_to_dictionary"]
[connection signal="back_press" from="CanvasLayer/Control/SafeArea/gameplay" to="." method="_on_gameplay_back_press"]
[connection signal="dictionary" from="CanvasLayer/Control/SafeArea/gameplay" to="." method="_on_gameplay_dictionary"]
[connection signal="rank" from="CanvasLayer/Control/SafeArea/gameplay" to="." method="_on_gameplay_rank"]
